--- a/ExpandableTable/SubSubTableViewCell.xib
+++ b/ExpandableTable/SubSubTableViewCell.xib
@@ -7,30 +7,47 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="SubSubTableViewCell" id="KGk-i7-Jjw" customClass="SubSubTableViewCell" customModule="ExpandableTable" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="SubSubTableViewCell" id="KGk-i7-Jjw" customClass="SubSubTableViewCell" customModule="ExpandableTable" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j2g-E4-jzX">
-                        <rect key="frame" x="8" y="8" width="304" height="27"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mhV-me-qTE">
+                        <rect key="frame" x="14" y="4" width="301" height="35"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j2g-E4-jzX">
+                                <rect key="frame" x="0.0" y="0.0" width="293" height="35"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="0.1529411765" green="0.75686274509999996" blue="0.27450980390000002" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="j2g-E4-jzX" firstAttribute="leading" secondItem="mhV-me-qTE" secondAttribute="leading" id="4vT-qA-kPZ"/>
+                            <constraint firstAttribute="bottom" secondItem="j2g-E4-jzX" secondAttribute="bottom" id="87C-up-cvs"/>
+                            <constraint firstItem="j2g-E4-jzX" firstAttribute="top" secondItem="mhV-me-qTE" secondAttribute="top" id="lhl-SE-Qfs"/>
+                            <constraint firstAttribute="trailing" secondItem="j2g-E4-jzX" secondAttribute="trailing" constant="8" id="y5F-PX-3Rc"/>
+                        </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                <integer key="value" value="5"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
+                    </view>
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                 <constraints>
-                    <constraint firstAttribute="trailing" secondItem="j2g-E4-jzX" secondAttribute="trailing" constant="8" id="aio-VU-P4t"/>
-                    <constraint firstAttribute="bottom" secondItem="j2g-E4-jzX" secondAttribute="bottom" constant="8" id="cby-rV-vPc"/>
-                    <constraint firstItem="j2g-E4-jzX" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="ock-ib-i8V"/>
-                    <constraint firstItem="j2g-E4-jzX" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="spI-XA-ifw"/>
+                    <constraint firstItem="mhV-me-qTE" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="4" id="1hE-54-tTM"/>
+                    <constraint firstItem="mhV-me-qTE" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="14" id="c7S-qi-0jx"/>
+                    <constraint firstAttribute="trailing" secondItem="mhV-me-qTE" secondAttribute="trailing" constant="5" id="cSn-ph-IUy"/>
+                    <constraint firstAttribute="bottom" secondItem="mhV-me-qTE" secondAttribute="bottom" constant="4" id="qg7-o1-pmg"/>
                 </constraints>
             </tableViewCellContentView>
-            <color key="backgroundColor" red="0.15294117647058825" green="0.75686274509803919" blue="0.27450980392156865" alpha="1" colorSpace="calibratedRGB"/>
             <connections>
+                <outlet property="bgView" destination="mhV-me-qTE" id="drU-vP-5v6"/>
                 <outlet property="txtLabel" destination="j2g-E4-jzX" id="gFC-QA-GXk"/>
             </connections>
         </tableViewCell>
