--- a/ExpandableTable/SubTableViewCell.xib
+++ b/ExpandableTable/SubTableViewCell.xib
@@ -14,14 +14,13 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="133"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="JHb-CL-83F">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="133"/>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="JHb-CL-83F">
+                        <rect key="frame" x="22" y="0.0" width="298" height="133"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </tableView>
                 </subviews>
-                <color key="backgroundColor" red="0.2156862745" green="0.50588235290000005" blue="0.27450980390000002" alpha="1" colorSpace="calibratedRGB"/>
                 <constraints>
-                    <constraint firstItem="JHb-CL-83F" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="bX1-Ax-Gx6"/>
+                    <constraint firstItem="JHb-CL-83F" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="22" id="bX1-Ax-Gx6"/>
                     <constraint firstItem="JHb-CL-83F" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="buI-d3-mGq"/>
                     <constraint firstAttribute="bottom" secondItem="JHb-CL-83F" secondAttribute="bottom" id="k51-FP-rOC"/>
                     <constraint firstAttribute="trailing" secondItem="JHb-CL-83F" secondAttribute="trailing" id="zxm-Ea-lNr"/>
